# pw_modul_14

./: docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py  index.rst
migrations/versions/: 08c90a805fee_init.py  1699c166583f_init.py  1f2550271432_init.py  5b31f3a8105b_init.py  92e5e69b6fd8_init.py  ffcf96989f93_init.py
src/: schemas.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_route_contacts.py  test_unit_repository_contacts.py
