[tool.poetry]
name = "pw-modul-12"
version = "0.1.0"
description = ""
authors = ["Kateryna-Shylina <shylina.k.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
fastapi-limiter = "^0.1.6"
slowapi = "^0.1.9"
cloudinary = "^1.41.0"
sphinx = "^8.0.2"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
